bug/clang_unused_lambda_capture/output.txt
+ clang++-6.0 --version
clang version 6.0.0-1ubuntu2 (tags/RELEASE_600/final)
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin

+ g++-7 --version
g++-7 (Ubuntu 7.3.0-27ubuntu1~18.04) 7.3.0
Copyright (C) 2017 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.


[ 5: constexpr auto&: works ]
test.cc

   #include <iostream>
   constexpr struct {
     struct {
       const char* doc = "Works";
     } mid;
   } top;
   int main() {
     constexpr auto& doc = top.mid;
     [](auto) { std::cout << doc.doc << std::endl; }(1);
     return 0;
   }

+ clang++-6.0 -std=c++14 -Wall -Werror ./test.cc -o ./test
+ ./test
Works

+ g++-7 -std=c++14 -Wall -Werror ./test.cc -o ./test
./test.cc: In lambda function:
./test.cc:9:27: error: 'doc' is not captured
   [](auto) { std::cout << doc.doc << std::endl; }(1);
                           ^~~
./test.cc:9:4: note: the lambda has no capture-default
   [](auto) { std::cout << doc.doc << std::endl; }(1);
    ^
./test.cc:8:19: note: 'constexpr const<unnamed struct>::<unnamed struct>& doc' declared here
   constexpr auto& doc = top.mid;
                   ^~~
---


